--- a/api-school-game/Dockerfile
+++ b/api-school-game/Dockerfile
@@ -1,18 +1,18 @@
 #
 # Build stage
 #
-#FROM maven:3.6.1-jdk-11-slim AS build
-#COPY src /home/app/src
-#COPY pom.xml /home/app
-#RUN mvn -f /home/app/pom.xml clean package
-#
-##
-## Package stage
-##
-#FROM openjdk:11-jdk-slim
-#COPY --from=build /home/app/target/*.jar /app/app.jar
-#CMD java $JAVA_OPTS -jar /app/app.jar
+FROM maven:3.6.1-jdk-11-slim AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package
 
+#
+# Package stage
+#
 FROM openjdk:11-jdk-slim
-COPY target/*.jar /app/app.jar
+COPY --from=build /home/app/target/*.jar /app/app.jar
 CMD java $JAVA_OPTS -jar /app/app.jar
+
+# FROM openjdk:11-jdk-slim
+# COPY target/*.jar /app/app.jar
+# CMD java $JAVA_OPTS -jar /app/app.jar
